--- a/index.html
+++ b/index.html
@@ -16,8 +16,81 @@
         <p>Exploration Prototype</p>
       </header>
 
-      <section class="game" aria-label="Play area">
-        <canvas id="game" width="320" height="480"></canvas>
+      <section class="game-area" aria-label="Play area">
+        <div class="stage-tools" aria-label="Stage tools">
+          <button class="editor-button" type="button" aria-label="Open creator">
+            Creator
+          </button>
+          <button class="map-button" type="button" aria-label="Open map">
+            Map
+          </button>
+        </div>
+        <div class="game">
+          <canvas id="game" width="320" height="480"></canvas>
+        </div>
+      </section>
+
+      <section class="editor-panel" aria-label="Creator tools" aria-hidden="true">
+        <header class="editor-header">
+          <span class="editor-title">Creator</span>
+          <button class="editor-close" type="button" aria-label="Close creator">
+            X
+          </button>
+        </header>
+        <div class="editor-row">
+          <span class="editor-label">Current</span>
+          <span class="editor-value" id="current-stage-label">0</span>
+        </div>
+        <div class="editor-row">
+          <label class="editor-label" for="stage-select">Stage</label>
+          <select id="stage-select">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="void">Void</option>
+          </select>
+        </div>
+        <div class="editor-row">
+          <label class="editor-label" for="grid-cols">Cols</label>
+          <input id="grid-cols" type="number" min="6" max="40" />
+          <label class="editor-label" for="grid-rows">Rows</label>
+          <input id="grid-rows" type="number" min="6" max="40" />
+          <button class="editor-action" id="grid-apply" type="button">
+            Apply
+          </button>
+        </div>
+        <div class="editor-row tile-palette">
+          <span class="editor-label">Blocks</span>
+          <button class="tile-button" data-tile="1" type="button">Solid</button>
+          <button class="tile-button" data-tile="2" type="button">Half Top</button>
+          <button class="tile-button" data-tile="3" type="button">
+            Half Bottom
+          </button>
+          <button class="tile-button" data-tile="4" type="button">Half Left</button>
+          <button class="tile-button" data-tile="5" type="button">
+            Half Right
+          </button>
+          <button class="tile-button" data-tile="6" type="button">One-way</button>
+          <button class="tile-button" data-tile="0" type="button">Empty</button>
+        </div>
+        <div class="editor-row">
+          <button class="editor-action" id="editor-clear" type="button">
+            Clear Stage
+          </button>
+          <button class="editor-action" id="editor-save" type="button">
+            Save
+          </button>
+        </div>
+        <p class="editor-hint">
+          Drag to paint. Hold Shift or right click to erase.
+        </p>
       </section>
 
       <section class="controls" aria-label="Controls">
@@ -34,6 +107,18 @@
 
       <footer class="hint">Arrow keys / WASD / buttons</footer>
     </main>
+
+    <div class="map-overlay" aria-hidden="true">
+      <div class="map-panel" role="dialog" aria-modal="true" aria-label="Map">
+        <header class="map-header">
+          <span class="map-title">Map</span>
+          <button class="map-close" type="button" aria-label="Close map">
+            X
+          </button>
+        </header>
+        <canvas id="map" width="320" height="320"></canvas>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
